--- a/README.html
+++ b/README.html
@@ -79,7 +79,8 @@ img {
 <div id="news" class="section level3">
 <h3>News</h3>
 <ul>
-<li>Version 0.2.0 released : added <code>add_filter</code> option to <code>xml_view()</code> for live XPath filtering (so you can see the results immediately and then just copy/paste the XPath string back into R)</li>
+<li>Version 0.2.1 : support for namespaces</li>
+<li>Version 0.2.0 : added <code>add_filter</code> option to <code>xml_view()</code> for live XPath filtering (so you can see the results immediately and then just copy/paste the XPath string back into R)</li>
 <li>Version 0.1.0 released</li>
 </ul>
 </div>
