--- a/README.html
+++ b/README.html
@@ -75,10 +75,15 @@ img {
 <p>The following functions are implemented:</p>
 <ul>
 <li><code>xml_view</code>: view HTML/XML nodes</li>
+<li><code>xml_tree_view</code>: view HTML/XML nodes</li>
 </ul>
+<hr />
+<p>Please <code>devtools::install_github(&quot;ramnathv/htmlwidgets&quot;)</code> for this as we’re now using the more modern (and bleeding edge <code>htmlwidgets</code> functionality).</p>
+<hr />
 <div id="news" class="section level3">
 <h3>News</h3>
 <ul>
+<li>Version 0.3.0 : <span class="citation">@timelyportfolio</span> added <code>xml_tree_view()</code></li>
 <li>Version 0.2.2 : added “generate R code” button</li>
 <li>Version 0.2.1 : support for namespaces</li>
 <li>Version 0.2.0 : added <code>add_filter</code> option to <code>xml_view()</code> for live XPath filtering (so you can see the results immediately and then just copy/paste the XPath string back into R)</li>
