--- a/README.html
+++ b/README.html
@@ -71,7 +71,7 @@ img {
 <li>an <code>xml2</code> <code>xml_node</code></li>
 </ul>
 <p>and view the formatted &amp; pretty-printed result in the RStudio viewer or web browser.</p>
-<p>The widget uses <a href="http://www.eslinstructor.net/vkbeautify/">vkbeautify</a> and <a href="https://highlightjs.org">highlight.js</a> to do all the work.</p>
+<p>The widget uses <a href="http://www.eslinstructor.net/vkbeautify/">vkbeautify</a>, <a href="https://highlightjs.org">highlight.js</a> and <a href="https://github.com/juliangruber/xml-viewer">xml-viewer</a> to do all the work.</p>
 <p>The following functions are implemented:</p>
 <ul>
 <li><code>xml_view</code>: view HTML/XML nodes</li>
