firefox works now

--- a/README.html
+++ b/README.html
@@ -83,6 +83,7 @@ img {
 <div id="news" class="section level3">
 <h3>News</h3>
 <ul>
+<li>Version 0.3.2 : Works with Firefox now</li>
 <li>Version 0.3.1 : Fixed a bug that was causing <code>xml_view</code> to not work on Linux RStudio Desktop</li>
 <li>Version 0.3.0 : <span class="citation">@timelyportfolio</span> added <code>xml_tree_view()</code></li>
 <li>Version 0.2.2 : added “generate R code” button</li>
