refactored xml_view

--- a/README.html
+++ b/README.html
@@ -83,6 +83,7 @@ img {
 <div id="news" class="section level3">
 <h3>News</h3>
 <ul>
+<li>Version 0.4.5 : Consistent <code>scroll</code> parameter and refactored <code>xml_view()</code> (enables multiple “xml views” per Rmd and prbly Shiny toos)</li>
 <li>Version 0.4.1 : Fixed bug in R-code generation for firefox &amp; linux RStudio Desktop viewer</li>
 <li>Version 0.4.0 : Enable passing in an initial XPath query string</li>
 <li>Version 0.3.3 : Code cleanup</li>
